Fix overlapping labels nodes with selected issues

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -34,6 +34,10 @@
     fill: #efefef;
 }
 
+.group_label {
+    pointer-events: none;
+}
+
 #group_dropdown {
     display: none;
 }
